ecmascript/parser/tests/test262-error-references/fail/58d9ebcbb28bf3a7.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/58d9ebcbb28bf3a7.js:1:8
  |
1 | for(let[a].b of 0);
  |        ^^^

